test/files/neg/t6214.check
t6214.scala:5: error: missing parameter type
  	m { s => case class Foo() }
  	    ^
1 error
